# dirigo-alazar

./: README.md  pyproject.toml
dirigo_alazar/: __init__.py  dirigo_alazar.py
examples/: default_ats9440.toml  default_ats9870.toml
tests/: hw_test.py
